--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
           <li class="nav__item">
             <a
-              href="#SAMSUMG"
+              href="#SAMSUNG"
               class="nav__link"
             >
               SAMSUNG
